@@ -1,10 +1,10 @@
 --- #YAML:1.0
 name: Math-BigInt-FastCalc
-version: 0.08
+version: 0.09
 version_from: lib/Math/BigInt/FastCalc.pm
 license: perl
 distribution_type: module
-generated_by: Math-BigInt-FastCalc version 0.08
+generated_by: Math-BigInt-FastCalc version 0.09
 installdirs: site
 requires:
-  Math::BigInt: 1.74
+  Math::BigInt: 1.75
