@@ -32,7 +32,7 @@ WriteMakefile(
     'NAME'		=> 'Math::BigInt::FastCalc',
     'VERSION_FROM'	=> 'lib/Math/BigInt/FastCalc.pm', # finds $VERSION
     'PREREQ_PM'		=> {
-	Math::BigInt => 1.74,
+	Math::BigInt => 1.75,
       },
     'LIBS'		=> [''], 	# e.g., '-lm'
     'DEFINE'		=> '', 		# e.g., '-DHAVE_SOMETHING'
