@@ -13,20 +13,20 @@ not run its Makefile.PL or Build.PL.
 
 -----BEGIN PGP SIGNED MESSAGE-----
 
-SHA1 81d4ebfd897fe6e6150a8fb77bc8dc0cc04025a2 CHANGES
+SHA1 6b25bbcce43c52868c00cf707bfd4919820e1498 CHANGES
 SHA1 58d7a00ab2a9f5448a561d49b5a2077efa245ac7 CREDITS
 SHA1 2ebdc830d3ab736b281b442fde222a489061e04c FastCalc.xs
 SHA1 7f21ec920c8aa4fd4c1ac59c7127b37967b17a09 MANIFEST
-SHA1 9e6e957b8fbff5b17748e5f3d75f03fd9b2f2308 META.yml
-SHA1 85923bcbbd52611ffabda4c739e45940eeed9aa0 Makefile.PL
-SHA1 5f73e0906d055d512180eb8b0b9c60f06edcb596 README
-SHA1 0219b495b96f8a946cd23c384b66c9231e29f0b6 TODO
-SHA1 588b8bf94ee20a44349683f0ec445cd037ad6756 lib/Math/BigInt/FastCalc.pm
+SHA1 b25889be83e63e10aac8272cf0b26c5522e1baf0 META.yml
+SHA1 a669316923038c4d4db0711b1933d940fc218965 Makefile.PL
+SHA1 092d51fc932958f0b9621f0f1ee92454acf9bbf0 README
+SHA1 4a97b901ec3fd7edb989c8918ec0d82b8f7dfff7 TODO
+SHA1 0233b1496e95a32cafd1d9a9fa9ee3ed7f9478b0 lib/Math/BigInt/FastCalc.pm
 SHA1 57a416650fede5f54aa295e5cd133022a0b9efdd t/bigfltpm.inc
 SHA1 4076f36c4d0989c5f3bfd208dd6e0c553ae35a3e t/bigfltpm.t
 SHA1 81f78404be3f660a61d68719de389d473888f640 t/bigintfc.t
-SHA1 631142ae4b92f7187bc526ccd7a83a8459582e65 t/bigintpm.inc
-SHA1 1648f8f9a0048b12b905ef59aa0bcb86c6cf6f17 t/bigintpm.t
+SHA1 f88c1aa03a27bd230a72574a53a55101686bf62b t/bigintpm.inc
+SHA1 afa175efb16aff6c897ebe96f6d31e166d4c0f20 t/bigintpm.t
 SHA1 f324311bde3f86401ea2708c42a6f13031a535a4 t/bootstrap.t
 SHA1 7f10510e0218cfae2fbb58dabeea0ba966ede013 t/mbi_rand.t
 SHA1 8b454e3015212b33974be31c54a0ca745c59b4ba t/mbimbf.inc
@@ -34,11 +34,11 @@ SHA1 ccc08f6373dba8db715fc1f2c18f16daacc902b4 t/mbimbf.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.2.4 (GNU/Linux)
 
-iQEVAwUBQdbLmXcLPEOTuEwVAQHpEwf9EzVBJ+espsuULLvpZh3pR/AIjzol2ilo
-K32XJEH3Ycx2F5S2tXTXQ8qz8Ng+4wp3K9n/xqkQsPXGRKCfuEeR1uYbQLjlNtN6
-UtVeKWb0/Mn8bjprpBRJKSzWOxurRZKlrGVszoxWJ7nJov25GCEN/JdzOOGIiOLa
-8Y5UxW5GjBwnrkq88NiEi5SN7z60waVHQIiXRX5MDKK1UGqgwxo1of6zizgDe0dn
-mVWeB5z9UXge2DPDaf63ow3ONZVD51qXWkm9pXLSZFC2pPE9CKPJTTDJavieTfKq
-hRirf3TP4/qYbcXY5dwsfE1o+Oxy1eFuuPMBQpAyBCsFrBU6u2Cqsw==
-=G5yl
+iQEVAwUBQj1sY3cLPEOTuEwVAQFkAQf7BpvRkE0BDACLdREpP5tNozQOmD0ddV/Q
+oWsSmQkFPkJi7vfkaU/MEoKkw/8+0Emp5FNzgG/m4iXRvfMFsa2o37OZoGiMHt+U
+h3NFx1Bgo9XxmUM++OC8Bl8CALGpdEYWKTFMzoTEJ9st0MGR+6tkQYzqW2W85hF6
+ndr71AXjbXG7h+VCm/c/HkyIp86J2s8e1aaNT16ZRAUGDPEmuqHo0IG2BNkUXekm
+8971ZGXzqdAwH/6xSrMlU1aRhs7otkdCI8r5JDS7uvBt76TzfQ0jP6phvdnUYT+q
+rUZ2+/N9X+pGLi5t5WtKPLyyps6F6fzxNn8a6Wy+8i36K1kXE37ZGQ==
+=eEDi
 -----END PGP SIGNATURE-----
